12 August 2025: Add logs to StrategyExecutor
7 August 2025: Add beforeTime callback to ScoreGenerator
31 July 2025: Add afterTime callback to ScoreGenerator
28 July 2025: Add position number limits and logs to SignalExecutor
27 July 2025: Fix 'Remove random markets' result verifier
26 July 2025: Fix FullPermutationParamsSelector
15 July 2025: Add TradeSignal optimization
15 July 2025: Change Optimizer name to StrategyOptimizer
12 July 2025: Add feature to check single signal effectiveness
3 July 2025: Add option to set right margin in Charts
6 July 2025: Show more backtest stats: average profit per trade and missed trades count
24 June 2025: Show average time per optimization loop
24 June 2025: Make HighestClose and LowestClose more efficient
22 June 2025: Add `Time` parameter to load only newer data
18 June 2025: Change default value for PE, MV, PB from -1.0 to Float.NaN
18 June 2025: Change data and indicator type from `double` to `float`