@@ -1,3 +1,4 @@
+18 August 2025: Add not-up-to-date markets to TimeMarketDataSet
 12 August 2025: Add logs to StrategyExecutor
 7 August 2025: Add beforeTime callback to ScoreGenerator
 31 July 2025: Add afterTime callback to ScoreGenerator
